# yolov5Android

./: README.md
Yolov5Application/app/: build.gradle
Yolov5Application/app/src/androidTest/java/com/example/yolov5application/: ExampleInstrumentedTest.java
Yolov5Application/app/src/main/: AndroidManifest.xml
Yolov5Application/app/src/main/assets/: yolov5s320sim.param  yolov5ssim.param
Yolov5Application/app/src/main/cpp/: CMakeLists.txt  YoloV5.cpp  YoloV5.h  native.cpp
Yolov5Application/app/src/main/java/com/example/yolov5application/: Box.java  MainActivity.java  Native.java
Yolov5Application/app/src/main/res/layout/: activity_main.xml
Yolov5Application/app/src/main/res/values/: strings.xml
Yolov5Application/app/src/test/java/com/example/yolov5application/: ExampleUnitTest.java
Yolov5Application/gradle/wrapper/: gradle-wrapper.properties
